--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -2,11 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="canonical" href="{{ page.target }}"/>
-        <meta http-equiv="refresh" content="0;url={{ page.target }}" />
     </head>
     <body>
         <h1>Redirecting...</h1>
-        <p><a href="{{ page.target }}">Click here</a></p> if you are not automatically redirected.<a>
+        <p><a href="{{ page.target }}">Click here</a> if you are not automatically redirected.</p>
     </body>
 </html>
