chore: Make redirecting page functional again

--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="canonical" href="{{ page.target }}"/>
+        <meta http-equiv="refresh" content="0;url={{ page.target }}" />
     </head>
     <body>
         <h1>Redirecting...</h1>
